[metadata]
name = example-pkg-donutlife
version = 0.0.1
author = Erika Pedersen and Aengus McGuinnes
author_email = erikalaraine2@gmail.com and aengus82520@gmail.com
description = A package to count k-mers, ETC ADD MORE HERE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src