[metadata]
name = krepe
version = 0.0.1
author = Erika Pedersen and Aengus McGuinnes
author_email = erikalaraine2@gmail.com and aengus82520@gmail.com
description = A package to count k-mers and calculate/plot De Bruijn graphs, occurence bar graphs, venn diagrams, and dendrograms. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RGBwalnut/Kmer-Counting-Analysis
project_urls =
    Bug Tracker = https://github.com/RGBwalnut/Kmer-Counting-Analysis/issues
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires=
	sourmash
	numpy
	matplotlib
	ex
	
python_requires = >=3.8

[options.packages.find]
where = src